# SLO-Scout

./: .gitignore  CLAUDE.md  README.md  SRE_PRESENTATION.md  controlplane.yaml  talosconfig  worker.yaml
backend/: pyproject.minimal.toml  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 000_timescaledb_setup.sql  001_initial_schema.py
backend/src/: __init__.py  main.minimal.py  main.py
backend/src/api/: __init__.py  analysis.py  analyze.py  artifacts.py  deps.py  journeys.py  metrics.py  pr.py  schemas.py  services.py  sli.py  slis.py  slo.py  slos.py
backend/src/consumers/: capsule_consumer.py
backend/src/embeddings/: __init__.py  embedding_service.py  factory.py  minilm_embedder.py  openai_embedder.py
backend/src/generators/: __init__.py  alert_rule_generator.py  example_usage.py  grafana_generator.py  grafana_panels.py  recording_rule_generator.py  runbook_generator.py  runbook_steps.py
backend/src/integrations/: __init__.py  github_client.py  gitlab_client.py
backend/src/middleware/: __init__.py  app_example.py  auth.py  cors.py  errors.py  example_usage.py  policy_guard.py  validation.py
backend/src/models/: __init__.py  artifact.py  base.py  capsule.py  evidence_pointer.py  instrumentation_recommendation.py  policy.py  service.py  sli.py  slo.py  telemetry_event.py  user_journey.py
backend/src/observability/: README.md  metrics.py
backend/src/services/: __init__.py  analysis_service.py  artifact_bundler.py  artifact_generator.py  blast_radius.py  capsule_retrieval.py  capsule_service.py  confidence_scorer.py  data_quality_calculator.py  evidence_linker.py  journey_ranker.py  (+15 more)
backend/tests/: conftest.py
(+184 files in other folders)
